k8s/prod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: netflix-web-service
  namespace: netflix-prod
  labels:
    app: netflix-web
    environment: prod
spec:
  selector:
    app: netflix-web
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: netflix-api-service
  namespace: netflix-prod
  labels:
    app: netflix-api
    environment: prod
spec:
  selector:
    app: netflix-api
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
